[day1] Faster!